change cluster params

--- a/k8s_config/base/chrome/deployment.yaml
+++ b/k8s_config/base/chrome/deployment.yaml
@@ -40,16 +40,13 @@ spec:
               value: "false"
             # - name: CONNECTION_TIMEOUT
             #   value: "900000"
-        # - image: gcr.io/bitpull/pressure:latest
-        #   name: pressure
-        #   env:
-        #     - name: PUPPETEER_URL
-        #       value: "http://chrome:3000"
-        #     - name: CHECK_INTERVAL
-        #       value: "1"
-        #     - name: MAXIMUM_QUEUE_SIZE
-        #       valueFrom:
-        #         configMapKeyRef:
-        #           key: MAX_CONCURRENT_SESSIONS
-        #           name: env-vars
+        - image: gcr.io/bitpull/pressure:latest
+          name: pressure
+          env:
+            - name: PUPPETEER_URL
+              value: "http://chrome:3000"
+            - name: CHECK_INTERVAL
+              value: "1"
+            - name: MAXIMUM_QUEUE_SIZE
+              value: "5"
            
