--- a/k8s_config/overlays/production/backend/deployment.yaml
+++ b/k8s_config/overlays/production/backend/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: gcr.io/bitpull/backend:latest
+          image: gcr.io/bitpull/backend:c803ad7
           livenessProbe:
             httpGet:
               path: /health
