--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   ],
   "scripts": {
     "test": "lerna run test",
+    "compile:backend": "cd packages/backend && yarn tsc",
+    "compile:frontend": "cd packages/frontend && yarn tsc",
+    "compile:worker": "cd packages/worker && yarn compile",
+    "lint:backend": "cd packages/backend && yarn lint --fix",
+    "lint:frontend": "cd packages/frontend && yarn lint --fix",
+    "lint:worker": "cd packages/worker && yarn lint --fix",
     "test:backend": "cd packages/backend && yarn test",
+    "test:frontend": "cd packages/frontend && yarn test",
     "test:worker": "cd packages/worker && yarn test",
     "bump": "lerna version",
     "diff": "lerna diff",
