--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -59,6 +59,7 @@
     "@types/dotenv-webpack": "^1.7.0",
     "@types/helmet": "^0.0.45",
     "@types/html-webpack-plugin": "^3.2.2",
+    "@types/jest": "^25.2.1",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^13.11.0",
     "@types/ramda": "^0.27.3",
@@ -85,10 +86,12 @@
     "file-loader": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.2",
     "html-webpack-plugin": "^4.0.4",
+    "jest": "^25.3.0",
     "jquery": "^3.4.1",
     "prettier": "^2.0.3",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.1.3",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.0",
     "ts-node": "^8.8.2",
     "ts-node-dev": "^1.0.0-pre.44",
