--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -48,6 +48,7 @@
     "qs": "^6.9.3",
     "request": "^2.88.2",
     "stripe": "^8.39.0",
+    "tree-kill": "^1.2.2",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
