--- a/packages/worker/tsconfig.json
+++ b/packages/worker/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "lib",
     "isolatedModules": true,
     "strict": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "typeRoots": [
       "./typings",
