--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -29,6 +29,7 @@
     "aws-sdk": "^2.653.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.11.1",
     "dotenv": "^8.2.0",
@@ -51,7 +52,8 @@
     "tree-kill": "^1.2.2",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.13.1",
@@ -59,6 +61,7 @@
     "@types/agenda": "^2.0.6",
     "@types/analytics-node": "^3.1.3",
     "@types/body-parser": "^1.19.0",
+    "@types/cls-hooked": "^4.3.0",
     "@types/faker": "^4.1.11",
     "@types/graphql-iso-date": "^3.3.3",
     "@types/graphql-type-json": "^0.3.2",
@@ -72,6 +75,7 @@
     "@types/qs": "^6.9.1",
     "@types/request": "^2.48.4",
     "@types/stripe": "^7.13.22",
+    "@types/uuid": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "concurrently": "^5.1.0",
