--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -48,6 +48,7 @@
     "stackdriver-errors-js": "^0.8.0",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "3.8.3",
+    "uuid": "^7.0.3",
     "uuidv4": "^6.0.7",
     "yup": "^0.28.3"
   },
