--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -72,6 +72,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-stripe-elements": "^6.0.4",
     "@types/recharts": "^1.8.9",
+    "@types/uuid": "^7.0.3",
     "@types/webpack": "^4.41.10",
     "@types/webpack-dev-server": "^3.10.1",
     "@types/webpack-node-externals": "^1.7.1",
