--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ aliases:
       echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
       gcloud auth configure-docker
       gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-      gcloud container clusters get-credentials production --zone us-east1-b
+      gcloud container clusters get-credentials production --zone us-east1-c
 
 jobs:
   node-tests:
