--- a/k8s_config/base/frontend/deployment.yaml
+++ b/k8s_config/base/frontend/deployment.yaml
@@ -26,10 +26,10 @@ spec:
           ports:
             - containerPort: 8080
               name: frontend
-          resources:
-            requests:
-              memory: "124Mi"
-              cpu: "100m"
-            limits:
-              memory: "512Mi"
-              cpu: "500m"
+          # resources:
+          #   requests:
+          #     memory: "124Mi"
+          #     cpu: "100m"
+          #   limits:
+          #     memory: "512Mi"
+          #     cpu: "500m"
