--- a/k8s_config/base/chrome/deployment.yaml
+++ b/k8s_config/base/chrome/deployment.yaml
@@ -15,6 +15,13 @@ spec:
       labels:
         app: chrome
     spec:
+      affinity:
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+                matchLabels:
+                  app: chrome
+            topologyKey: kubernetes.io/hostname
       containers:
         - image: browserless/chrome:latest
           name: chrome
