--- a/k8s_config/base/chrome/deployment.yaml
+++ b/k8s_config/base/chrome/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
     name: chrome
   name: chrome
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: chrome
@@ -18,10 +19,10 @@ spec:
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
+            - labelSelector:
                 matchLabels:
                   app: chrome
-            topologyKey: kubernetes.io/hostname
+              topologyKey: kubernetes.io/hostname
       containers:
         - image: browserless/chrome:latest
           name: chrome
@@ -29,6 +30,12 @@ spec:
           ports:
             - name: chrome
               containerPort: 3000
+          readinessProbe:
+            httpGet:
+              path: /pressure
+              port: 3000
+            initialDelaySeconds: 60
+            periodSeconds: 5
           env:
             - name: HOST
               value: "0.0.0.0"
@@ -47,12 +54,4 @@ spec:
               value: "false"
             - name: CONNECTION_TIMEOUT
               value: "1200000"
-        - image: gcr.io/bitpull/pressure:latest
-          name: pressure
-          env:
-            - name: PUPPETEER_URL
-              value: "http://chrome:3000"
-            - name: CHECK_INTERVAL
-              value: "1"
-            - name: MAXIMUM_QUEUE_SIZE
-              value: "5"
+              
