--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,43 @@
 version: '3'
 
 services:
-    backend:
-        build:
-            context: .
-            dockerfile: packages/backend/Dockerfile
-        image: bitpull-backend:latest
-        restart: always
-        ports:
-            - 5000:5000
-        depends_on:
-            # - mongo
-            - chrome
-        links:
-            # - mongo
-            - chrome
-        env_file: 'packages/backend/.env'
-        environment:
-            - PORT=5000
-            # - DATABASE_URI=mongodb://mongo:27017/scrippy
-            - PUPPETEER_ENDPOINT=ws://chrome:3000
+    # backend:
+    #     build:
+    #         context: .
+    #         dockerfile: packages/backend/Dockerfile
+    #     image: bitpull-backend:latest
+    #     restart: always
+    #     ports:
+    #         - 5000:5000
+    #     depends_on:
+    #         # - mongo
+    #         - chrome
+    #     links:
+    #         # - mongo
+    #         - chrome
+    #     env_file: 'packages/backend/.env'
+    #     environment:
+    #         - PORT=5000
+    #         # - DATABASE_URI=mongodb://mongo:27017/scrippy
+    #         - PUPPETEER_ENDPOINT=ws://chrome:3000
 
-    frontend:
-        build:
-            context: .
-            dockerfile: packages/frontend/Dockerfile
-        image: bitpull-frontend:latest
-        restart: always
-        ports:
-            - 8080:8080
-        depends_on:
-            # - mongo
-            - backend
-        links:
-            # - mongo
-            - backend
-        env_file: './packages/frontend/.env'
-        environment:
-            - PORT=8080
+    # frontend:
+    #     build:
+    #         context: .
+    #         dockerfile: packages/frontend/Dockerfile
+    #     image: bitpull-frontend:latest
+    #     restart: always
+    #     ports:
+    #         - 8080:8080
+    #     depends_on:
+    #         # - mongo
+    #         - backend
+    #     links:
+    #         # - mongo
+    #         - backend
+    #     env_file: './packages/frontend/.env'
+    #     environment:
+    #         - PORT=8080
 
     chrome:
         image: browserless/chrome:latest
