--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^1.0.0-rc.3",
     "chrome-aws-lambda": "^3.0.4",
     "clone-deep": "^4.0.1",
+    "date-fns": "^2.13.0",
     "deepmerge": "^4.2.2",
     "json2csv": "^5.0.0",
     "p3x-json2xls-worker-thread": "^2020.4.144",
