--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "deploy": "sh scripts/deploy.sh"
   },
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "lerna": "^3.21.0"
+  },
+  "dependencies": {
+    "typescript": "^3.9.2"
   }
 }
