--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,9 +7,9 @@
     "start": "NODE_ENV=production ts-node --transpile-only -r tsconfig-paths/register ./src/index.ts",
     "dev": "concurrently \"ts-node-dev -r tsconfig-paths/register --ignore-watch node_modules ./src/index.ts \"",
     "debug": "concurrently \"ts-node-dev -r tsconfig-paths/register --ignore-watch node_modules  --inspect -- ./src/index.ts\" \"sleep 10 && yarn typegen\"",
-    "db:migrate": "migrate up",
-    "db:migrate:make": "migrate create",
-    "db:migrate:rollback": "migrate down",
+    "db:migrate": "migrate up --compiler=\"ts:./register.js\" --store=\"./src/components/data/migrations.ts\"",
+    "db:migrate:make": "migrate create --compiler=\"ts:./register.js\"",
+    "db:migrate:rollback": "migrate down --compiler=\"ts:./register.js\"",
     "ts-node": "ts-node -r tsconfig-paths/register src/index.ts",
     "typegen": "graphql-codegen",
     "tsc": "tsc --skipLibCheck && rm -rf ./build",
@@ -40,7 +40,7 @@
     "graphql-type-json": "^0.3.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
-    "migrate-mongoose-typescript": "^3.3.4",
+    "migrate": "^1.6.2",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
