--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^2.14.0",
     "deepmerge": "^4.2.2",
     "json2csv": "^5.0.0",
+    "object-hash": "^2.0.3",
     "p3x-json2xls-worker-thread": "^2020.4.168",
     "puppeteer-core": "^3.1.0",
     "request": "^2.88.2",
@@ -40,6 +41,7 @@
     "@types/jest": "^25.2.2",
     "@types/json2csv": "^5.0.1",
     "@types/node": "^14.0.1",
+    "@types/object-hash": "^1.3.3",
     "@types/puppeteer-core": "^2.0.0",
     "@types/ramda": "^0.27.5",
     "@types/request-promise-native": "^1.0.17",
