--- a/k8s_config/base/frontend/deployment.yaml
+++ b/k8s_config/base/frontend/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: frontend
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: frontend
@@ -17,13 +18,13 @@ spec:
         app: frontend
         tier: frontend
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchLabels:
-                  app: frontend
-              topologyKey: kubernetes.io/hostname
+      # affinity:
+      #   podAntiAffinity:
+      #     requiredDuringSchedulingIgnoredDuringExecution:
+      #       - labelSelector:
+      #           matchLabels:
+      #             app: frontend
+      #         topologyKey: kubernetes.io/hostname
       containers:
         - name: frontend
           imagePullPolicy: IfNotPresent
