--- a/k8s_config/base/backend/deployment.yaml
+++ b/k8s_config/base/backend/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: backend
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: backend
@@ -17,13 +18,13 @@ spec:
         app: backend
         tier: backend
     spec:
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            - labelSelector:
-                matchLabels:
-                  app: backend
-              topologyKey: kubernetes.io/hostname
+      # affinity:
+      #   podAntiAffinity:
+      #     requiredDuringSchedulingIgnoredDuringExecution:
+      #       - labelSelector:
+      #           matchLabels:
+      #             app: backend
+      #         topologyKey: kubernetes.io/hostname
       containers:
         - name: backend
           imagePullPolicy: IfNotPresent
